# foodgram

./: .gitignore  rest.http  setup.cfg
backend/: requirements.txt
backend/foodgram/: Makefile  main.py  pyproject.toml  requirements.txt
backend/foodgram/api/: exceptions.py  middleware.py  models.py  pagination.py  serializers.py  urls.py  validators.py  views.py
backend/foodgram/api/migrations/: 0001_initial.py
backend/foodgram/foodgram/: settings.py
backend/foodgram/reciepts/: admin.py  constants.py  models.py
backend/foodgram/reciepts/migrations/: 0001_initial.py
