[project]
name = "foodgram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asgiref==3.8.1",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "cryptography==44.0.2",
    "defusedxml==0.7.1",
    "django==4.2.20",
    "django-filter==2.4.0",
    "django-templated-mail==1.1.1",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.5.0",
    "djoser==2.2.0",
    "dotenv==0.9.9",
    "idna==3.10",
    "oauthlib==3.2.2",
    "pillow==11.1.0",
    "pycparser==2.22",
    "pyjwt==2.9.0",
    "python-dotenv==1.0.1",
    "python3-openid==3.2.0",
    "pytz==2025.1",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rest-framework-simplejwt==0.0.2",
    "social-auth-app-django==5.4.3",
    "social-auth-core==4.5.6",
    "sqlparse==0.5.3",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
]
